--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
 			<artifactId>jaxb-core</artifactId>
 			<version>2.2.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version> <!-- Убедитесь, что используете последнюю версию -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
